src/objects/ContactsAppSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>EncryptionKey__c</fullName>
        <label>Encryption Key</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalyticsAppID__c</fullName>
        <label>Localytics App ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuthClientId__c</fullName>
        <label>OAuth Client Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuthClientRedirectURI__c</fullName>
        <label>OAuth Client Redirect URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuthClientSecret__c</fullName>
        <label>OAuth Client Secret</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Contacts App Settings</label>
</CustomObject>